randomOpponentBuddy function and randomNumber function

--- a/Mokepon/mokepon.html
+++ b/Mokepon/mokepon.html
@@ -43,8 +43,8 @@
     <section id="seleccionar-ataque">
         <h2>choose your attack:</h2>
 
-        <p>Your buddy have <span>3</span> lives</p>
-        <p>Your opponent has <span>3</span> lives</p>
+        <p>Your buddy <span id="buddy-player"></span> have <span>3</span> lives</p>
+        <p>Your opponent's buddy <span id="buddy-opponent"></span> has <span>3</span> lives</p>
         <p>
             <button id="fire-btn">Fire 🔥</button>
             <button id="water-btn">Water 💧</button>
