--- a/Mokepon/mokepon.html
+++ b/Mokepon/mokepon.html
@@ -15,25 +15,13 @@
         <h1 class="title">Mokepon</h1>
             <h2 class="subtitle">choose your buddy</h2>
             <div id="cards-container" class="cards">
-
             </div>
-
-                <!-- Hipodoge -> Water
-                Capipepo -> ground
-                Ratigueya -> fire
-                Langostelvis -> fire and water
-                Tucapalma -> ground and water
-                Pydos -> ground and fire -->
-
             <button id="choose-buddy-btn">choose</button>
     </section>
     <section id="choose-attack">
         <h1 class="title">Mokepon</h1>
-        <h2 class="subtitle">choose your attack:</h2>
-            <div class="card-attacks">
-                <button id="fire-btn" class="attack-btn">Fire 🔥</button>
-                <button id="water-btn" class="attack-btn">Water 💧</button>
-                <button id="ground-btn" class="attack-btn">ground 🌱</button>
+        <h2 class="subtitle">Choose your attack: </h2>
+            <div id="attack-container" class="card-attacks">           
             </div>
 
             <div id="mensajes">   
