--- a/Mokepon-canvas/mokepon.html
+++ b/Mokepon-canvas/mokepon.html
@@ -20,12 +20,14 @@
     </section>
 
     <section id="mokepon-map">
-        <h1 class="title">Go around the map with your mokepon</h1>
+        <h2 class="subtitle">Go around the map with your mokepon</h2>
         <canvas id="map"></canvas>
         <button onmouseup="stopMove()"  onmousedown="moveUp()">Up</button>
-        <button onmouseup="stopMove()" onmousedown="moveDown()">Down</button>
-        <button onmouseup="stopMove()" onmousedown="moveLeft()">Left</button>
-        <button onmouseup="stopMove()" onmousedown="moveRight()">Right</button>
+        <div>
+            <button onmouseup="stopMove()" onmousedown="moveDown()">Down</button>
+            <button onmouseup="stopMove()" onmousedown="moveLeft()">Left</button>
+            <button onmouseup="stopMove()" onmousedown="moveRight()">Right</button>
+        </div>
     </section>
 
     <section id="choose-attack">
